--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -87,7 +87,7 @@
     position: relative;
   
     img {
-        bor
+        border
       position: absolute;
       width: 100%;
       height: 100%;
