--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -87,6 +87,7 @@
     position: relative;
   
     img {
+        border: 1px solid red;
       position: absolute;
       width: 100%;
       height: 100%;
