_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -82,7 +82,7 @@
 
 .section--team {
   .card__media {
-      border: 1px solid red;
+      border: 1px solid blue;
     margin-top: auto;
     padding-top: 100%;
     position: relative;
