_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -76,7 +76,7 @@
 .section--posts {
   .cell {
       border: 1px solid red;
-      width: 800px;
+      width: 100%;
     margin-bottom: 1.5rem;
     max-width: $width-sm;
   }
