_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -72,7 +72,12 @@
   }
 }
 
-.section--team,
+.section--team.section--posts {
+  .cell {
+    margin-bottom: 1.5rem;
+    max-width: $width-sm;
+  }
+}
 .section--posts {
   .cell {
     margin-bottom: 1.5rem;
