--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -75,7 +75,7 @@
 .section--team.section--posts {
   .cell {
     margin-bottom: 1.5rem;
-    max-width: $width-md;
+    max-width: $width-lg;
   }
 }
 
