_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -72,13 +72,7 @@
   }
 }
 
-.section--team.section--posts {
-  .cell {
-    margin-bottom: 1.5rem;
-    max-width: $width-lg;
-  }
-}
-
+.section--team
 .section--posts {
   .cell {
     margin-bottom: 1.5rem;
