--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -119,7 +119,7 @@
   .section--team,
   .section--posts {
     .flex {
-      justify-content: right;
+      justify-content: center;
     }
   }
 }
