_grids.scss: changed

--- a/src/sass/components/_grids.scss
+++ b/src/sass/components/_grids.scss
@@ -33,6 +33,13 @@
   }
 }
 
+.flex--col-2 {
+  .cell {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
 .flex--col-3 {
   .cell {
     flex: 0 0 33.333%;
